# fastapi-backports

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: app.py
fastapi_backports/: __init__.py  _backporter.py  _retyped.py  _utils.py  _versions.py  apply.py
fastapi_backports/_backports/: __init__.py  _base.py  lifespan_decorator.py  multiple_query_models.py  postponed_annotations.py  query_method.py  route_middleware.py  type_alias_type.py
scripts/: test.sh
tests/: conftest.py
tests/backports/: test_lifespan_decorator.py  test_multiple_query_models.py  test_postponed_annotations.py  test_query_method.py  test_route_middleware.py  test_type_alias_type.py  utils.py
tests/typing/: declarations.py  test_typing.py
